--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 
 	* lib/Makefile.am (EXTRA_DIST): Added alloca.c.
 
+	* nmz/Makefile.am (libnmz_la_LDFLAGS): Set -version-info to 2:0:0.
+
 2000-01-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* src/namazu-cmd.c (main): Print a help message if invoked as CGI.
