--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,17 @@
-2000-01-28  Ryuji Abe  <raeva@t3.rim.or.jp>
-
-	* src/Makefile.am (noinst_PROGRAMS): Changed libexec_PROGRAMS.
-
 2000-01-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* conf/namazurc-sample: Add comments for Template directive.
+
+	* src/rcfile.c (process_rc_template): New function.
+
+	* src/namazu.c (get_templatedir): New function.
+	(set_templatedir): Ditto.
+	(make_fullpathname_msg): Use templatedir.
+
+	* src/result.c (compose_result): Be const 3rd parameter.
+
+	* src/namazu.c (namazu_core): Abolish 3rd parameter. All callers
+	changed. 
 	* src/usage.c (show_usage): Use MAILING_ADDRESS macro.
 
 	* pl/var.pl.in: Define $MAILING_ADDRESS.
@@ -15,6 +23,10 @@
 	* acconfig.h: Add MAILING_ADDRESS.
 
 	* configure.in (OPT_NMZ_URI): Change URI of Namazu Website.
+
+2000-01-28  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* src/Makefile.am (noinst_PROGRAMS): Changed libexec_PROGRAMS.
 
 2000-01-27  Ryuji Abe  <raeva@t3.rim.or.jp>
 
