--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2000-01-28  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* configure.in: Aboslish --with-admin=EMAIL option.
+
+	* pl/var.pl.in: Fix $MAILING_ADDRESS quotation bug.
+
+	* scripts/mknmz.pl.in (make_headfoot): Handle <!-- ADDRESS -->.
+
+	* template/NMZ.foot.ja.in: Add <!-- ADDRESS --> marks.
+
+	* template/NMZ.foot.in: Ditto.
+
+	* pl/conf.pl.in: Add $ADDRESS and change commenting style.
+
 	* conf/namazurc-sample: Add comments for Template directive.
 
 	* src/rcfile.c (process_rc_template): New function.
