--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-01-29 13:57+0900\n"
+"POT-Creation-Date: 2000-01-29 14:30+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -163,10 +163,14 @@ msgstr "rc ファイルの読み込み中: "
 #: src/rcfile.c:646
 #, fuzzy, c-format
 msgid ""
-"Index:   %s\n"
-"Logging: %s\n"
-"Lang:    %s\n"
-"Scoring: %s\n"
+"Index:    %s\n"
+"Logging:  %s\n"
+"Lang:     %s\n"
+"Scoring:  %s\n"
+"Template: %s\n"
+"EmphasisTags:\n"
+"    start: %s\n"
+"    end:   %s\n"
 msgstr ""
 "インデックス (Index): %s\n"
 "<BASE>タグ (Base):    %s\n"
@@ -174,14 +178,14 @@ msgstr ""
 "使用する言語 (Lang):  %s\n"
 "スコア計算 (Scoring): %s\n"
 
-#: src/rcfile.c:658
+#: src/rcfile.c:665
 #, fuzzy, c-format
-msgid "Alias: \"%s\"  -> \"%s\"\n"
+msgid "Alias: %-10s\t%s\n"
 msgstr "別名:   \"%s\" -> \"%s\"\n"
 
-#: src/rcfile.c:668
-#, c-format
-msgid "Replace: \"%s\" -> \"%s\"\n"
+#: src/rcfile.c:675
+#, fuzzy, c-format
+msgid "Replace: %-10s\t%s\n"
 msgstr "置換: \"%s\" -> \"%s\"\n"
 
 #: src/usage.c:51
@@ -656,15 +660,14 @@ msgid ""
 msgstr ""
 
 #, fuzzy
-#~ msgid "Alias:   %s -> %s\n"
+#~ msgid "Alias: \"%s\"  -> \"%s\"\n"
 #~ msgstr "別名:   \"%s\" -> \"%s\"\n"
 
-#, fuzzy
-#~ msgid "Replace: \"%s\"  \"%s\"\n"
+#~ msgid "Replace: \"%s\" -> \"%s\"\n"
 #~ msgstr "置換: \"%s\" -> \"%s\"\n"
 
 #, fuzzy
-#~ msgid "Alias: %s  %s\n"
+#~ msgid "Alias:   %s -> %s\n"
 #~ msgstr "別名:   \"%s\" -> \"%s\"\n"
 
 #~ msgid "Config:  %s\n"
